k8s/demo/services/integration/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
