k8s/demo/services/integration/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: api
            servicePort: 80
